--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -65,7 +65,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FPSAIProject/Arena/Maps/AIProjMap.AIProjMap
+GameDefaultMap=/Game/MainMenuLvl.MainMenuLvl
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/FPSAIProj.FPSAIProjGameMode
 GlobalDefaultServerGameMode=None
